fix bug on small screens

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,12 +2,14 @@ body {
   margin: 0.5rem;
 }
 
-.grid-x {
-  margin: 0 -5px;
-}
+@media screen and (min-width: 40em) {
+  .grid-x {
+    margin: 0 -5px;
+  }
 
-.grid-x > div {
-  margin: 0 5px;
+  .grid-x > div {
+    margin: 0 5px;
+  }
 }
 
 table input[type], table select {
